--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
@@ -70,7 +70,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.JoiningDate, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.JoiningDate, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.JoiningDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.JoiningDate)
                                     </div>
                                 </div>
@@ -78,14 +78,14 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PromotionDemotionDate, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.PromotionDemotionDate, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.PromotionDemotionDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.PromotionDemotionDate)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DateOfLeaving, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.DateOfLeaving, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.DateOfLeaving, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.DateOfLeaving)
                                     </div>
                                 </div>
@@ -113,7 +113,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OrderDate, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.OrderDate, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.OrderDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.OrderDate)
                                     </div>
                                 </div>
